Updated serverless file to correct the syntax errors.

--- a/coffee-shop-api/serverless.yml
+++ b/coffee-shop-api/serverless.yml
@@ -26,11 +26,11 @@ provider:
 
 functions:
   # Modular function imports
-  createOrder: ${file(./functions/createOrder.yml)}
-  getOrder: ${file(./functions/getOrder.yml)}
-  listOrders: ${file(./functions/listOrders.yml)}
-  updateOrder: ${file(./functions/updateOrder.yml)}
-  deleteOrder: ${file(./functions/deleteOrder.yml)}
+  ${file(./functions/createOrder.yml)}
+  ${file(./functions/getOrder.yml)}
+  ${file(./functions/listOrders.yml)}
+  ${file(./functions/updateOrder.yml)}
+  ${file(./functions/deleteOrder.yml)}
 
 package:
   individually: true  # Package functions separately for faster deployment and cleaner bundles
