--- a/coffee-shop-api/package.json
+++ b/coffee-shop-api/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.767.0",
-    "@aws-sdk/lib-dynamodb": "^3.767.0"
+    "@aws-sdk/lib-dynamodb": "^3.767.0",
+    "joi": "^17.13.3"
   }
 }
